--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
   - "3.3"
 install:
   - if [[ $TRAVIS_PYTHON_VERSION == 2.* ]]; then pip install twisted; fi
-  - python setup.py install
+  - python setup.py develop
 script:
   - nosetests $(if [[ $TRAVIS_PYTHON_VERSION == 3.* ]]; then echo --fresher-tags=~twisted; fi) --with-fresher tests
